# Advanced-Data-Structures

./: .gitignore  CBinTree.cpp  CMakeLists.txt  dynamicVector.cpp  main.cpp  partialPersistant
ED/: QuadTree.cpp  Rectangle.hpp  Rtree.hpp  test.cpp
FixedVector/: main.cpp
Practica_1/: vectorDinamico.cpp  vectorModular.cpp
Practica_2/: 3.4_Abstract_Data_Type.cpp  3.8.2_Reducing_code.cpp
Skip-List/: CSkipList.cpp  CSkipList.h  skiplist.cpp
fatnodes/: a.out  partialPersistant  partialPersistant.cpp  script  script2
lab_1/: vectorDinamico.cpp  vectorFijo.cpp  vectorModular.cpp  vectorOObjetos.cpp
lab_2/: 3.4_Abstract_Data_Type.cpp  3.5_Design_Patterns.cpp  3.6_CBinaryTree.cpp  3.6_Function_Object.cpp  3.7_Namespaces.cpp  3.8.1_Pool.cpp  3.8.2_Reducing_code.cpp  3.8_Run_Time.cpp  MyNS.h
lab_3/: comp.cpp  compVector.cpp
lab_4/: ReadWriteImg  ReadWriteImg.cpp
lab_5/: CompressQT.cpp  QTcompress.cpp  README.md  bitmap.cpp
lab_6/: tree.cpp  z.cpp
lab_7/: dbscan.cpp  dbscan2.cpp  exe
preParcial/: R-tree.cpp  RTree.hpp  Rectangle.hpp  fakeRStart.cpp  fakeR_tree.cpp  test-harness.cpp
