cmake_minimum_required(VERSION 3.22)
project(EDA)

set(CMAKE_CXX_STANDARD 14)

add_executable(EDA main.cpp Practica_2/3.4_Abstract_Data_Type.cpp)


add_executable(VectorFijo Practica_1/vectorFijo.cpp)
add_executable(VectorDinamico Practica_1/vectorOObjetos.cpp)
add_executable(vectorModular Practica_1/vectorModular.cpp)
add_executable(vectorDinamico Practica_1/vectorDinamico.cpp)
add_executable(3.5_Design_Patterns Practica_2/3.5_Design_Patterns.cpp)
add_executable(3.7_Namespaces Practica_2/3.7_Namespaces.cpp)
add_executable(3.8.2_Reducing_code Practica_2/3.8.2_Reducing_code.cpp)
add_executable(3.6_Function_Object Practica_2/3.6_Function_Object.cpp)
add_executable(3.4_Abstract_Data_Type Practica_2/3.4_Abstract_Data_Type.cpp)